<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/login">

    <fragment
        android:id="@+id/login"
        android:name="com.vestil.dormfix.mobile.ui.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/register" />
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/home"
            app:popUpTo="@id/login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/register"
        android:name="com.vestil.dormfix.mobile.ui.RegisterFragment"
        android:label="@string/register_title"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_home"
            app:destination="@id/home"
            app:popUpTo="@id/login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/home"
        android:name="com.vestil.dormfix.mobile.ui.HomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_login"
            app:destination="@id/login"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>
